# Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  app-builder.json  deploy.sh  vcpkg-configuration.json  vcpkg.json
assets/applications/: template-app.desktop
assets/fonts/: LICENSE.txt
cmake/: cm0-package.cmake
cmake/templates/: app.desktop.in  app.service.in
cmake/toolchains/: cp0-aarch64-linux-gnu.cmake
src/: main.cpp
src/app/: app.cpp  app.h  asset_manager.cpp  asset_manager.h  screen_manager.h  screen_namager.cpp
src/config/: lv_conf.h  lv_conf_cm0.h  lv_conf_desktop.h
src/logger/: logger.cpp  logger.h
src/model/: base_model.cpp  base_model.h
src/platform/: linux_input.cpp  linux_input.h
src/reactive/: bindings.cpp  bindings.h  subjects.cpp  subjects.h
src/view/: theme.cpp  theme.h  ui_const.h
src/view/screens/: apple_screen.cpp  apple_screen.h  base_screen.cpp  base_screen.h  butter_screen.cpp  butter_screen.h
src/view/widgets/: base_widget.h  icon_button.cpp  icon_button.h  navbar.cpp  navbar.h  titlebar.cpp  titlebar.h
src/viewmodel/: base_viewmodel.cpp  base_viewmodel.h
